tests/Tuc/Fixtures/errors/InvalidMultilineRightNote.tuc
tuc parse error test
participants
    GenericService parts

">"
Invalid note
